[package]
name = "andross"
version = "0.1.0"
edition = "2024"
description = "A distributed key-value database"
license = "Apache-2.0"
repository = "https://github.com/jkosh44/andross"

[dependencies]

[workspace.lints.rust]

[workspace.lints.rustdoc]

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }
