[workspace]
resolver = "2"
members = ["client", "server", "service"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "A distributed key-value database"
license = "Apache-2.0"
repository = "https://github.com/jkosh44/andross"

[workspace.dependencies]
bytes = "1.11"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
humantime = "2.3"
itertools = "0.14"
prost = "0.14"
# This is needed because it's the protobuf library raft uses.
protobuf = { version = "2", features = ["with-bytes"] }
raft = { git = "https://github.com/tikv/raft-rs.git", rev = "1fd05e000fb094015507c5c985849d370100fb72" }
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7"
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"

[workspace.lints.rust]

[workspace.lints.rustdoc]

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allowed lints
implicit-hasher = "allow"
missing_panics_doc = "allow"
multiple_crate_versions = "allow"
