[package]
name = "andross-client"
description = "Andross client"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
publish = false

[dependencies]
andross-service = { path = "../service" }
tokio = { workspace = true }
tonic = { workspace = true }

[lints]
workspace = true
