[package]
name = "andross-server"
description = "Andross server"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
publish = false

[dependencies]
andross-service = { path = "../service" }
bytes = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
protobuf = { workspace = true }
raft = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

[lints]
workspace = true
