[package]
name = "andross-server"
description = "Andross server"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
publish = false

[dependencies]
bytes = { workspace = true }
clap = { workspace = true }
fjall = { workspace = true }
futures = { workspace = true }
humantime = { workspace = true }
itertools = { workspace = true }
protobuf = { workspace = true }
raft = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
proptest-derive = { workspace = true }
turmoil = { workspace = true }
tower = { workspace = true }
hyper-util = { workspace = true }

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["tonic-prost", "prost"]
