[package]
name = "andross-server"
description = "Andross server"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
publish = false

[dependencies]
bytes = { workspace = true }
clap = { workspace = true }
fjall = { workspace = true }
humantime = { workspace = true }
protobuf = { workspace = true }
raft = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }

[dev-dependencies]
bzip2 = { workspace = true }
proptest = { workspace = true }
proptest-derive = { workspace = true }
reqwest = { workspace = true }
tar = { workspace = true }

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["tonic-prost", "prost"]
