[package]
name = "andross-service"
description = "gRPC and protobuf definitions"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
publish = false

[lints]
workspace = true

[dependencies]
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["tonic-prost", "prost"]
